Tue Jan 18 12:55:15 2000  Mikael Djurfeldt  <mdj@r11n07-s.pdc.kth.se>

	* acinclude.m4 (AC_LIBLTDL_CONVENIENCE): Add $(top_srcdir)/libltdl
	instead of $(top_builddir)/libltdl to includepath.

2000-01-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs: New subdirectory for elisp tools.

2000-01-15  Marius Vollmer  <mvo@zagadka.ping.de>

	* README, HACKING: Moved "Hacking it yourself" section from README
	to HACKING.  Updated recommended libtool version to be 1.3.4.

2000-01-14  Gary Houston  <ghouston@arglist.com>

	* configure.in: needs to have --disable-networking, not
	--disable-net.

2000-01-12  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* libltdl/acconfig.h: New file: Needed by autogen.sh.

Tue Jan 11 13:42:35 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* autogen.sh: Added messages as we run autogen in subdirectories.

	* configure.in: Output libugile/guile-func-name-check script, and
	chmod +x it. 

2000-01-11  Marius Vollmer  <mvo@zagadka.ping.de>

	* libltdl/autogen.sh: New file.
	* autogen.sh: Invoke libltdl/autogen.sh.

2000-01-09  Marius Vollmer  <mvo@zagadka.ping.de>

	Finally applied the libltdl patch from Thomas Tanner, with slight
	modifications.  All code copied from the libtool package is from
	libtool-1.3.4.

	* configure.in: Make "--with-modules=yes" the default.  Do not
	clear INCLTDL, LIBLTDL prior to processing "--with-modules".
	
    1999-07-25  Thomas Tanner  <tanner@ffii.org>

	    * Makefile.am: add libltdl to SUBDIRS, automake automatically
	      includes ltconfig, ltmain.sh and acconfig.h in EXTRA_DIST
	    * acinclude.m4: remove GUILE_DLSYM_USCORE, add libtool.m4
	      (no need to install libtool any more)
	    * configure.in: replace --enable-dynamic-linking with
	      --with-modules, required modules can be specified using
	      --with-modules="/path/to/mod.la" and will be linked
	      statically on platforms that don't support dynamic loading,
	      configure libltdl, configure libtool for dlopening