@@ -15,6 +15,7 @@ For fixes or providing information which led to a fix:
       Mark Galassi
       Greg Harvey
       Dirk Herrmann
+   Richard Kim
       Brad Knotwell
       Eric Moore
     Roland Orre
